# organic-fertilizers-detection

./: .gitignore  CITATION.cff  README.md  requirements.txt
App/: notebook.ipynb  test-fields.json
Datasets/main/: main-crops.json  main-fields.json
Datasets/other/: dusaf-fields.json  inva-tech-fields.json  other-fields.json
Datasets/validation/: val-crops.json
Notebooks/:  1-exloratory-analysis.ipynb  1-exloratory-analysis.ipynb  1-features-extraction.ipynb  2-analysis.ipynb  2-ml-models.ipynb  utils.py
Notebooks/1-features-extraction/: notebook.ipynb
Notebooks/1-features-extraction/utils/: LICENSE  README.md  ee_satellites.py  landsat8.py  sentinel1.py  sentinel2.py  sentinel_satellites.py  setup.cfg
Notebooks/2-analysis/: notebook.ipynb  utils.py
Notebooks/3-ml-models/: 3-ml-models.ipynb  notebook.ipynb  utils.py
Notebooks/3-ml-models/saved-config/: model.pkl  scaler.pkl
Notebooks/4-application/: notebook.ipynb  test-fields.json  utils.py
Notebooks/4-generalization/: notebook.ipynb  notebook1.ipynb  notebook2.ipynb  utils.py
Notebooks/utils/: LICENSE  README.md  optical_features.py  radar_features.py  sentinel_satellites.py
Notes/: notes.md
