[metadata]
name = sentinel_satellites
version = 0.0.10
author = Francesco Amato
author_email = amatofrancesco99@gmail.com
description = A Python library that allows to extract data from sentinel satellites, exploiting machine parallelism and relying on Google Earth Engine APIs.
long_description = file: README.md
long_description_content_type = text/markdown
license = mit
url = https://github.com/Amatofrancesco99/master-thesis/tree/main/Notebooks/1-features-extraction/utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers

[options]
py_modules = 
    sentinel_satellites
    optical_features
    radar_features
install_requires =
    earthengine-api
    pandas